# tauri-store

./: Cargo.toml  index.html  package-lock.json  package.json  server.js
src/: App.css  App.jsx  styles.css  useToken.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src/AddCarpet/: AddCarpet.jsx  Carpets.jsx  ViewDB.jsx  addCarpet.css
src/Archive/: ArchDB.jsx  Archive.css  Archive.jsx
src/Bill/: Bill.jsx  Item.jsx  Print.css  Print.jsx  bill.css  item.css
src/Container/: Login.css  Login.jsx
src/Hello/: Hello.jsx  hello.css
src/Hello/Hero/: Hero.jsx  hero.css  سخؤهشم1.psd
src/Login/: Login.jsx
src/Login2/: Login2.css  Login2.jsx
src/Return/: Return.jsx  return.css
src/ViewDB/: AddCarpet.jsx  Carpets.jsx  ViewDB.css  ViewDB.jsx  addCarpet.css
src/assets/Janna LT Bold/: readme.html
src/layouts/: Card.jsx  card.css
