[package]
name = "hozifa"
version = "0.0.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
edition = "2021"
default-run = "hozifa"

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
tauri = { version = "1.3.0", features = ["shell-all"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
