[package]
name = "final"
version = "0.0.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
edition = "2021"
default-run = "final"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.3.0", features = ["windows7-compat"] }

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
